Add SolrRelationUtil fix to add `null` to Lists instead of `None`