@@ -40,7 +40,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
     <spark.version>3.0.1</spark.version>
-    <solr.version>8.8.2</solr.version>
+    <solr.version>8.9.0</solr.version>
     <hadoop.version>3.2.2</hadoop.version>
     <fasterxml.version>2.12.3</fasterxml.version>
     <scala.version>2.12.12</scala.version>
@@ -238,7 +238,10 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M5</version>
         <configuration>
-          <argLine> -XX:MaxPermSize=${MaxPermSize}</argLine>
+          <showSuccess>false</showSuccess>
+          <excludes>
+            <exclude>**/FusionPipelineClientTest.java</exclude>
+          </excludes>
         </configuration>
       </plugin>
       <!-- ScalaTest runs Scala tests -->
@@ -618,6 +621,11 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
+      <version>${fasterxml.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
       <version>${fasterxml.version}</version>
     </dependency>
     <dependency>
